fix: resolve Sonar issues in branch comparison (S6885, S1948)
- BranchComparisonChart.java: replace nested Math.min/max pairs with
  Math.clamp (java:S6885 x2)
- BranchComparisonPanel.java: mark currentSnapshot as transient so
  the non-serializable field does not violate java:S1948

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>